couldn't change the alignment but corrected the code once again

--- a/style.css
+++ b/style.css
@@ -159,8 +159,7 @@ body {
     border-radius: 50%;
 }
 
-.about-right { flex: 2; content: left;} 
-.about-right { text-align: left; }
+.about-right { flex: 2;} 
 .skills-list { margin-top: 15px; padding-left: 20px; }
 
 /* --- Footer --- */
